[metadata]
name = dashnet-erav
version = 0.0.2
author = erav
author_email = adoneitan@gmail.com
description =  A tui shell application displaying netstat-like data written in python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/erav/dashnet
project_urls =
    Bug Tracker = https://github.com/erav/dashnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Topic :: System :: Networking :: Monitoring

[options]
package_dir =
    = dashnet
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dashnet
